--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
+<!DOCTYPE html>
 <html>
-<head>
- 
-	<title>npnp</title> 
-	
- 
-	<style>
-	html, body {
-	height: 50%;
-	margin: 0;
-	padding: 0;
-	}
-	#map {
-	height: 100%;
-	}
-	</style>
- 
- 
+<body>
+
+<h1>My First Heading</h1>
+
+<p>My first paragraph.</p>
+
+</body>
+</html>
